# Space

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  Space.cpp  triangle.cpp
legacy/: timestamp.cpp
reference/: CMakeLists.txt  CMakeSettings.json  device.cpp
shaders/: shader.frag  shader.vert
